--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Dataset",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A library for filtering arrays of objects of arbitrary structure",
   "main": "dataset.js",
   "scripts": {
@@ -18,6 +18,11 @@
   ],
   "author": "Vladimir Neverov <sanguini@gmail.com>",
   "license": "MIT",
+  "homepage": "https://github.com/vne/dataset",
+  "bugs": {
+    "url": "https://github.com/vne/dataset/issues",
+    "email": "sanguini@gmail.com"
+  },
   "devDependencies": {
     "assert": "~0.4.9",
     "mocha": "~1.13.0",
